update image source

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Young Nomads - Your SEO Partner</title>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="media-queries.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/media-queries.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
@@ -51,7 +51,7 @@
                 <a href="#" class="primary-button get-started-btn" data-aos="fade-down" data-aos-delay="700">Get Started</a>
             </div>
             <div class="header-right" data-aos="fade-up" data-aos-delay="700">
-                <img src="./assets/img1.png" alt="Hero image">
+                <img src="/assets/images/img1.png" alt="Hero image">
             </div>
         </div>
     </header>
@@ -66,19 +66,19 @@
 
                 <div class="logos flex">
                     <div class="logo-wrapper">
-                        <img class="logo" src="./assets/company1.svg" alt="">
+                        <img class="logo" src="/assets/images/company1.svg" alt="">
                     </div>
                     <div class="logo-wrapper">
-                        <img class="logo" src="./assets/company2.svg" alt="">
+                        <img class="logo" src="/assets/images/company2.svg" alt="">
                     </div>
                     <div class="logo-wrapper">
-                        <img class="logo" src="./assets/company3.svg" alt="">
+                        <img class="logo" src="/assets/images/company3.svg" alt="">
                     </div>
                     <div class="logo-wrapper">
-                        <img class="logo" src="./assets/company4.svg" alt="">
+                        <img class="logo" src="/assets/images/company4.svg" alt="">
                     </div>
                     <div class="logo-wrapper">
-                        <img class="logo" src="./assets/company5.svg" alt="">
+                        <img class="logo" src="/assets/images/company5.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -95,42 +95,42 @@
 
             <div class="features-area flex">
                 <div class="features-card flex" data-aos="fade-up-right">
-                    <img src="./assets/asset 11.svg" alt="">
+                    <img src="/assets/images/feature1.svg" alt="">
                     <h3>Gain Context</h3>
                     <p>Through data aggregation, Hubble brings context to your existing data and identifies new assets and risks currently flying under the radar of the overall network – bringing agentless visibility to your entire tech stack.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
 
                 <div class="features-card flex" data-aos="fade-up">
-                    <img src="./assets/feature1.svg" alt="">
+                    <img src="/assets/images/feature2.svg" alt="">
                     <h3>Address Blind Spots</h3>
                     <p>By thoroughly understanding the state of your enterprise and what is going on, organizations are able to address gaps in a timely and effective manner.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
 
                 <div class="features-card flex" data-aos="fade-up-left">
-                    <img src="./assets/feature2.svg" alt="">
+                    <img src="/assets/images/feature3.svg" alt="">
                     <h3>Eliminate Risk</h3>
                     <p>By fully understanding what you know about your network and gaining visibility into previous black holes, organizations can fully remediate risks previously unavailable to them.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
 
                 <div class="features-card flex" data-aos="fade-up-right">
-                    <img src="./assets/feature3.svg" alt="">
+                    <img src="/assets/images/feature4.svg" alt="">
                     <h3>Design surveys</h3>
                     <p>Get feedback on images, videos or audio files.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
 
                 <div class="features-card flex" data-aos="fade-up">
-                    <img src="./assets/feature4.svg" alt="">
+                    <img src="/assets/images/feature5.svg" alt="">
                     <h3>Preference tests</h3>
                     <p>Find out which designs users prefer and why.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
                 </div>
 
                 <div class="features-card flex" data-aos="fade-up-left">
-                    <img src="./assets/feature6.svg" alt="">
+                    <img src="/assets/images/feature6.svg" alt="">
                     <h3>Five second tests</h3>
                     <p>Test comprehensibility by measuring first impressions.</p>
                     <a href="#" class="secondary-button">Learn More <i class="fa-solid fa-right-long"></i></a>
@@ -143,7 +143,7 @@
     <section class="big-feature-section">
         <div class="container flex big-feature-container">
             <div class="feature-img">
-                <img src="./assets/img2.png" alt="">
+                <img src="/assets/images/img2.png" alt="">
             </div>
 
             <div class="feature-desc flex">
@@ -158,7 +158,7 @@
     <section class="big-feature-section">
         <div class="container flex big-feature-container" id="second-big-feature">
             <div class="feature-img">
-                <img src="./assets/img3.png" alt="">
+                <img src="/assets/images/img3.png" alt="">
             </div>
             <div class="feature-desc flex">
                 <h4>Effortless validation for</h4>
@@ -172,7 +172,7 @@
     <section class="big-feature-section">
         <div class="container flex big-feature-container">
             <div class="feature-img">
-                <img src="./assets/img4.png" alt="">
+                <img src="/assets/images/img4.png" alt="">
             </div>
             <div class="feature-desc flex">
                 <h4>Effortless validation for</h4>
@@ -192,24 +192,24 @@
             </div>
 
             <div class="examples-area flex">
-                <a class="examples-card" href="#" style="background-image: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('./assets/service1.webp');">
+                <a class="examples-card" href="#" style="background-image: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('/assets/images/service1.webp');">
                     <div class="overlay"></div>
                     <h3 class="card-text">Content Marketing</h3>
                 </a>
 
                 <a class="examples-card" href="#"
-                    style="background-image: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('./assets/service2.webp');">
+                    style="background-image: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('/assets/images/service2.webp');">
                     <div class="overlay"></div>
                     <h3 class="card-text">On Page SEO</h3>
                 </a>
 
                 <a class="examples-card" href="#"
-                    style="background-image: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('./assets/service3.webp');">
+                    style="background-image: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('/assets/images/service3.webp');">
                     <div class="overlay"></div>
                     <h3 class="card-text">Technical SEO</h3>
                 </a>
 
-                <a class="examples-card" href="#" style="background-image: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('./assets/service4.webp');">
+                <a class="examples-card" href="#" style="background-image: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('/assets/images/service4.webp');">
                     <div class="overlay"></div>
                     <h3 class="card-text">Off Page SEO</h3>
                 </a>
@@ -288,6 +288,6 @@
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://kit.fontawesome.com/628003722a.js" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="/assets/js/script.js"></script>
 </body>
 </html>
