--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>Young Nomads - Your SEO Partner</title>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/media-queries.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/media-queries.css">
+    <link rel="stylesheet" href="/css/tailwind.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
@@ -288,6 +289,6 @@
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://kit.fontawesome.com/628003722a.js" crossorigin="anonymous"></script>
-    <script src="/assets/js/script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
