--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <div class="nav-links ac" id="nav-links">
             <ul class="flex">
-                <li><a href="#" class="hover-link">About</a></li>
+                <li><a href="/about.html" class="hover-link">About</a></li>
                 <li><a href="#" class="hover-link">Case Studies</a></li>
                 <li><a href="#" class="hover-link">Contact</a></li>
             </ul>
