--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <!-- nav bar -->
-    <nav class="container main-nav flex" data-aos="fade-down" data-aos-delay="1200" data-aos-duration="1000">
+    <nav class="container main-nav flex">
         <a href="#" class="company-logo">
             <!-- <img src="./brand-logo.png" alt="company company-logo"> -->
             <p class="brand-logo">YoungNomads</p>
@@ -30,6 +30,7 @@
 
         <div class="nav-links ac" id="nav-links">
             <ul class="flex">
+                <li><a href="/index.html" class="hover-link active">Home</a></li>
                 <li><a href="/about.html" class="hover-link">About</a></li>
                 <li><a href="#" class="hover-link">Case Studies</a></li>
                 <li><a href="#" class="hover-link">Contact</a></li>
