created navbar for about us

--- a/about.html
+++ b/about.html
@@ -12,6 +12,28 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
+    <!-- nav bar -->
+    <nav class="container main-nav flex">
+        <a href="#" class="company-logo">
+            <!-- <img src="./brand-logo.png" alt="company company-logo"> -->
+            <p class="brand-logo">YoungNomads</p>
+        </a>
+
+        <div class="nav-links ac" id="nav-links">
+            <ul class="flex">
+                <li><a href="/index.html" class="hover-link">Home</a></li>
+                <li><a href="/about.html" class="hover-link active">About</a></li>
+                <li><a href="#" class="hover-link">Case Studies</a></li>
+                <li><a href="#" class="hover-link">Contact</a></li>
+            </ul>
+        </div>
+
+        <a href="#" class="nav-toggle hover-link" id="nav-toggle">
+            <i class="fa-sharp fa-solid fa-bars"></i>
+        </a>
+        </div>
+    </nav>
+
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script
