--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/media-queries.css">
+    <link rel="stylesheet" href="/css/responsive-style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
