created about head

--- a/about.html
+++ b/about.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/css/about.css" />
     <link rel="stylesheet" href="/css/responsive-about.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
   </head>
   <body>
     <!-- nav bar -->
@@ -35,7 +37,13 @@
     </nav>
 
     <!-- main container -->
-    <div class="about-main"></div>
+    <div class="container flex justify-center">
+        <div class="text-center py-20 md:w-[30rem]">
+            <h1 class="text-[2rem] md:text-[3.5rem] mb-3">About Us</h1>
+            <p class="text-base md:text-lg pb-3">Young Nomads is a SEO Company led by Ayush Gupta from a emerging city Indore, based in Central India.</p>
+            <p class="text-base md:text-lg">We are solely focusing on giving hyper growth to our clients through organic medium and make their business grow. </p>
+        </div>
+    </div>
 
     <!-- footer -->
     <footer>
