created and styled cards

--- a/index.html
+++ b/index.html
@@ -140,6 +140,60 @@
         </div>
     </section>
 
+    <!-- CIO section -->
+    <section class="cio-section">
+        <div class="container grid">
+            <div class="grid-item">
+                <i class="fa-solid fa-user"></i>
+                <div class="descreption">
+                    <h3>I'm a CISO</h3>
+                    <p>Understand, quantify, and mitigate underlying risk by validating your assets and their risks.</p>
+                </div>
+                <div class="go-corner" href="#">
+                    <div class="go-arrow">
+                      →
+                    </div>
+                </div>
+            </div>
+            <div class="grid-item">
+                <i class="fa-solid fa-user"></i>
+                <div class="descreption">
+                    <h3>I'm a CIO</h3>
+                    <p>Provide assurance in monitoring and management of IT software, hardware, systems and integrations owned by the business.</p>
+                </div>
+                <div class="go-corner" href="#">
+                    <div class="go-arrow">
+                      →
+                    </div>
+                </div>
+            </div>
+            <div class="grid-item">
+                <i class="fa-solid fa-user"></i>
+                <div class="descreption">
+                    <h3>I'm a SOC Analyst</h3>
+                    <p>Ensure timely and effective response to an investigation by being able to confidently answer asset related questions.</p>
+                </div>
+                <div class="go-corner" href="#">
+                    <div class="go-arrow">
+                      →
+                    </div>
+                </div>
+            </div>
+            <div class="grid-item">
+                <i class="fa-solid fa-user"></i>
+                <div class="descreption">
+                    <h3>I'm an IT Operator</h3>
+                    <p>Improve IT operations and monitoring by understanding the entire landscape of your assets.</p>
+                </div>
+                <div class="go-corner" href="#">
+                    <div class="go-arrow">
+                      →
+                    </div>
+                </div>
+            </div>
+        </div>    
+    </section>
+
     <!--big feature section -->
     <section class="big-feature-section">
         <div class="container flex big-feature-container">
