update home page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--top banner-->
     <div class="top-banner">
         <div class="container">
-            <p class="small-bold-text banner-text">What's new to Young Nomads - open and closed card sorting</p>
+            <p class="small-text banner-text">What's new to Young Nomads - open and closed card sorting</p>
         </div>
     </div>
 
@@ -37,7 +37,7 @@
             </ul>
         </div>
 
-        <a href="#" class="nav-toggle hover-link" id="nav-toggle">
+        <a href="#" class="nav-toggle" id="nav-toggle">
             <i class="fa-sharp fa-solid fa-bars"></i>
         </a>
         </div>
@@ -208,9 +208,7 @@
                 </p>
             </div>
         </div>
-    </section>
     
-    <section class="big-feature-section">
         <div class="container flex big-feature-container" id="second-big-feature">
             <div class="feature-img">
                 <img src="/images/img3.png" alt="">
@@ -222,9 +220,7 @@
                 </p>
             </div>
         </div>
-    </section>
 
-    <section class="big-feature-section">
         <div class="container flex big-feature-container">
             <div class="feature-img">
                 <img src="/images/img4.png" alt="">
@@ -239,7 +235,7 @@
     </section>
 
     <!-- Examples section -->
-    <section class="examples-section ">
+    <section class="examples-section">
         <div class="container">
             <div class="examples-header flex">
                 <h2 class="examples-heading-text">One platform, endless possibilities</h2>
@@ -276,9 +272,12 @@
     <div class="cta-section">
         <div class="container flex cta-section-container">
             <h2>Why Choose Us</h2>
-            <p>Its simple, we deliver results.</p>
-            <p>Growth. 🚀 </p>
-            <p>Organic traffic from Google.</p>
+            <div>
+
+                <p>Its simple, we deliver results.</p>
+                <p>Growth. 🚀 </p>
+                <p>Organic traffic from Google.</p>
+            </div>
             <a href="#" class="primary-button">Get started</a>
         </div>
     </div>
