--- a/about.html
+++ b/about.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="/css/about.css" />
     <link rel="stylesheet" href="/css/responsive-about.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <script src="https://cdn.tailwindcss.com"></script>
 
   </head>
   <body>
@@ -37,11 +36,11 @@
     </nav>
 
     <!-- main container -->
-    <div class="container flex justify-center">
-        <div class="text-center py-20 md:w-[30rem]">
-            <h1 class="text-[2rem] md:text-[3.5rem] mb-3">About Us</h1>
-            <p class="text-base md:text-lg pb-3">Young Nomads is a SEO Company led by Ayush Gupta from a emerging city Indore, based in Central India.</p>
-            <p class="text-base md:text-lg">We are solely focusing on giving hyper growth to our clients through organic medium and make their business grow. </p>
+    <div class="container about-main">
+        <div class="about-description">
+            <h1>About Us</h1>
+            <p>Young Nomads is a SEO Company led by Ayush Gupta from a emerging city Indore, based in Central India.</p>
+            <p>We are solely focusing on giving hyper growth to our clients through organic medium and make their business grow. </p>
         </div>
     </div>
 
