--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
     <section class="companies-section">
         <div class="container">
             <div class="small-bold-text companies-header">
-                <h4>
+                <h4 data-aos="fade-up" data-aos-delay="600">
                     The world’s best companies rely on Young Nomads to improve their online performance.
                 </h4>
 
-                <div class="logos flex">
+                <div class="logos flex" data-aos="fade-up" data-aos-delay="700">
                     <div class="logo-wrapper">
                         <img class="logo" src="/images/company1.svg" alt="">
                     </div>
@@ -143,7 +143,7 @@
     <!-- CIO section -->
     <section class="cio-section">
         <div class="container grid">
-            <div class="grid-item">
+            <div class="grid-item" data-aos="flip-left">
                 <i class="fa-solid fa-user"></i>
                 <div class="descreption">
                     <h3>I'm a CISO</h3>
@@ -155,7 +155,7 @@
                     </div>
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item" data-aos="flip-right">
                 <i class="fa-solid fa-user"></i>
                 <div class="descreption">
                     <h3>I'm a CIO</h3>
@@ -167,7 +167,7 @@
                     </div>
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item" data-aos="flip-right">
                 <i class="fa-solid fa-user"></i>
                 <div class="descreption">
                     <h3>I'm a SOC Analyst</h3>
@@ -179,7 +179,7 @@
                     </div>
                 </div>
             </div>
-            <div class="grid-item">
+            <div class="grid-item" data-aos="flip-left">
                 <i class="fa-solid fa-user"></i>
                 <div class="descreption">
                     <h3>I'm an IT Operator</h3>
