created team section

--- a/about.html
+++ b/about.html
@@ -37,10 +37,43 @@
 
     <!-- main container -->
     <div class="container about-main">
-        <div class="about-description">
+        <div class="about-description" data-aos="zoom-in">
             <h1>About Us</h1>
             <p>Young Nomads is a SEO Company led by Ayush Gupta from a emerging city Indore, based in Central India.</p>
             <p>We are solely focusing on giving hyper growth to our clients through organic medium and make their business grow. </p>
+        </div>
+    </div>
+
+    <!-- Team Section -->
+    <div class="container team-container">
+        <h2  data-aos="fade-right" data-aos-delay="400" data-aos-duration="1000">Our Team</h2>
+        <div class="cards-container">
+            <div class="card" data-aos="fade-left" data-aos-delay="500" data-aos-duration="1000">
+                <div class="card-top">
+                    <img src="/images/ayush-gupta.jpg" alt="">
+                    <div class="text">
+                        <h3>Ayush Gupta</h3>
+                        <h4>FOUNDER</h4>
+                        <i class="fa-brands fa-linkedin"></i>
+                    </div>
+                </div>
+                <div class="card-bottom">
+                    <p>He has worked as Software Developer with L&T Infotech for close to 3 years, after which he worked as a Digital Marketer for Startups & with leading Digital Marketing agency which has clients like Dominos, Big Basket, Urban Ladder, Cult Fit and many more.</p>
+                </div>
+            </div>
+            <div class="card" data-aos="fade-left" data-aos-delay="600" data-aos-duration="1000">
+                <div class="card-top">
+                    <img src="/images/adithya-rathore.jpeg" alt="">
+                    <div class="text">
+                        <h3>Aditya Singh Rathore</h3>
+                        <h4>CONSULTANT</h4>
+                        <i class="fa-brands fa-linkedin"></i>
+                    </div>
+                </div>
+                <div class="card-bottom">
+                    <p>Aditya believes in constant learning and inclusive growth. He has worked on data analytics and is fascinated by data-driven decision-making. He has captained various basketball teams and enjoys live sports. He is an avid reader of evolutionary science. He has also volunteered for NGOs and seeks collective betterment.</p>
+                </div>
+            </div>
         </div>
     </div>
 
