--- a/about.html
+++ b/about.html
@@ -77,6 +77,62 @@
         </div>
     </div>
 
+    <!-- Career Section -->
+    <div class="container">
+        <div class="career-head">
+            <p>CAREERS</p>
+            <h1>Come work with us!</h1>
+        </div>
+
+        <div class="career-bottom">
+            <div class="career">
+                <img src="/images/asset 6.svg" alt="">
+                <h4>Employee equity plan</h4>
+                <p>We are strong believers in a business-owner mentality - and want you to be more than just an employee., but to feel you're an integral part of Hubble.</p>
+            </div>
+            <div class="career">
+                <img src="/images/asset 7.svg" alt="">
+                <h4>Competitive salary</h4>
+                <p>Equity is important - but so is offering salaries that are well aligned with other top tech companies, regardless of where you are located.</p>
+            </div>
+            <div class="career">
+                <img src="/images/asset 8.svg" alt="">
+                <h4>Annual bonus eligibility</h4>
+                <p>You work hard - and we want to reward teams that go over and above, with both stock and cash bonuses, both ad-hoc and annually.</p>
+            </div>
+            <div class="career">
+                <img src="/images/asset 9.svg" alt="">
+                <h4>PPO medical options</h4>
+                <p>There are enough worries in life and your medical plan should not be one of them. We provide competitive PPO plans, aligned with big companies.</p>
+            </div>
+            <div class="career">
+                <img src="/images/asset 10.svg" alt="">
+                <h4>Dental and vision plan options</h4>
+                <p>There are enough worries in life and your medical plan should not be one of them. We provide competitive PPO plans, aligned with big companies.</p>
+            </div>
+            <div class="career">
+                <img src="/images/asset 11.svg" alt="">
+                <h4>Parental leave — covering 100% of salary</h4>
+                <p>As we grow, so are you, both professionally and personally. We cover 100% of your parental leave, regardless of location.</p>
+            </div>
+            <div class="career">
+                <img src="/images/asset 12.svg" alt="">
+                <h4>Telemedicine and OneMedical</h4>
+                <p>OneMedical is a leader in Telemedicine, which we offer to all employees participating in our healthcare plans.</p>
+            </div>
+            <div class="career">
+                <img src="/images/asset 13.svg" alt="">
+                <h4>Unlimited leave policy</h4>
+                <p>Life work balance is very important for us. At Hubble, we want you to take the time you need to recharge and spend time with those you care most about.</p>
+            </div>
+            <div class="career">
+                <img src="/images/asset 6.svg" alt="">
+                <h4>Frequent employee social events</h4>
+                <p>The pandemic has been tough on us all - and we want to everyone to bounce back - with frequent employee events including lunches and social hours.</p>
+            </div>
+        </div>
+    </div>
+
     <!-- footer -->
     <footer>
         <div class="container flex footer-container">
