created grow section

--- a/about.html
+++ b/about.html
@@ -133,6 +133,18 @@
         </div>
     </div>
 
+    <!-- Grow Section -->
+    <div class="container">
+        <div class="grow-container">
+            <div class="grow-description">
+                <h2>Helping Brands Grow!</h2>
+                <p>Ayush has worked with various companies from different sector like Software Companies, eCommerce, helping brands launch new products. Currently, the company is continuing with the same zeal and helping leading Edtech company like KopyKitab.com.</p>
+                <i class="fa-brands fa-linkedin"></i>
+            </div>
+            <img src="/images/grow.png" alt="">
+        </div>
+    </div>
+
     <!-- footer -->
     <footer>
         <div class="container flex footer-container">
