--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                 <li><a href="/index.html" class="hover-link">Home</a></li>
                 <li><a href="/about.html" class="hover-link active">About</a></li>
                 <li><a href="#" class="hover-link">Case Studies</a></li>
-                <li><a href="#" class="hover-link">Contact</a></li>
+                <li><a href="/contact.html" class="hover-link">Contact</a></li>
             </ul>
         </div>
 
