created contact head

--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,15 @@
         </div>
     </nav>
 
+    <!-- Contact Head -->
+    <div class="container contact-head">
+        <div class="description">
+            <h1>Let's talk</h1>
+            <p>Our team is on hand to answer any questions you have. We'd be more than happy to help.</p>
+        </div>
+        <img src="/images/contact-ring.png" alt="">
+    </div>
+
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script
