--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,28 @@
         <img src="/images/contact-ring.png" alt="">
     </div>
 
-     <!-- footer -->
-     <footer>
+    <!-- Contact Form -->
+    <div class="container">
+        <div class="form-container">
+            <h1>Speak to Sales</h1>
+            <p>Fill out your details below if you want to learn more about our product. We’ll reply ASAP.</p>
+            <form action="">
+                <div class="form-left">
+                    <input type="text" placeholder="First Name">
+                    <input type="text" placeholder="Last Name">
+                    <input type="email" placeholder="Email">
+                    <input type="number" placeholder="Phone No.">
+                </div>
+                <div class="form-right">
+                    <textarea name="" id="" placeholder="Message"></textarea>
+                    <button class="primary-button">Send Enquiry</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- footer -->
+    <footer>
         <div class="container flex footer-container">
             <div class="logo-link-div">
                 <a href="#" class="company-logo">
