created support section

--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,15 @@
         </div>
     </div>
 
+    <!-- Already Customer Section -->
+    <div class="container support-container">
+        <div class="support-team">
+            <h2>Already a customer? Chat to our support team</h2>
+            <p>or Reach us through our live chat, accessible through the documentation/support link in your environment</p>
+            <a class="primary-button" href="/contact.html">Contact Us</a>
+        </div>
+    </div>
+
     <!-- footer -->
     <footer>
         <div class="container flex footer-container">
