--- a/contact.html
+++ b/contact.html
@@ -70,6 +70,16 @@
         </div>
     </div>
 
+    <!-- Book a Demo -->
+    <div class="container">
+        <div class="demo-container">
+            <div class="text">
+                <h1>Want to see more? Book a demo</h1>
+                <a class="primary-button" href="/contact.html">Book a demo</a>
+            </div>
+        </div>
+    </div>
+
     <!-- footer -->
     <footer>
         <div class="container flex footer-container">
