--- a/contact.html
+++ b/contact.html
@@ -125,6 +125,17 @@
             </div>
         </div>
     </footer>
+    
+    <!-- Newsletter -->
+    <div class="container">
+        <div class="newsletter">
+            <h2>Get the latest updates. Subscribe for our newsletter</h2>
+            <div class="form">
+                <input type="text" placeholder="Enter your email">
+                <a href="/index.html" class="primary-button">Subscribe</a>
+            </div>
+        </div>
+    </div>
 
     <!-- Subfooter -->
     <div class="subfooter">
