added fade animation on contact page

--- a/contact.html
+++ b/contact.html
@@ -35,15 +35,15 @@
     <!-- Contact Head -->
     <div class="container contact-head">
         <div class="description">
-            <h1>Let's talk</h1>
-            <p>Our team is on hand to answer any questions you have. We'd be more than happy to help.</p>
+            <h1 data-aos="fade-right" data-aos-delay="400">Let's talk</h1>
+            <p data-aos="fade-right" data-aos-delay="500">Our team is on hand to answer any questions you have. We'd be more than happy to help.</p>
         </div>
-        <img src="/images/contact-ring.png" alt="">
+        <img src="/images/contact-ring.png" alt="" data-aos="fade-left" data-aos-delay="600">
     </div>
 
     <!-- Contact Form -->
     <div class="container">
-        <div class="form-container">
+        <div class="form-container" data-aos="fade-up" data-aos-delay="700">
             <h1>Speak to Sales</h1>
             <p>Fill out your details below if you want to learn more about our product. We’ll reply ASAP.</p>
             <form action="">
