--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <ul class="flex">
                 <li><a href="/index.html" class="hover-link active">Home</a></li>
                 <li><a href="/about.html" class="hover-link">About</a></li>
-                <li><a href="#" class="hover-link">Case Studies</a></li>
+                <li><a href="/case-studies.html" class="hover-link">Case Studies</a></li>
                 <li><a href="/contact.html" class="hover-link">Contact</a></li>
             </ul>
         </div>
