--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <ul class="flex">
                 <li><a href="/index.html" class="hover-link">Home</a></li>
                 <li><a href="/about.html" class="hover-link active">About</a></li>
-                <li><a href="#" class="hover-link">Case Studies</a></li>
+                <li><a href="/case-studies.html" class="hover-link">Case Studies</a></li>
                 <li><a href="/contact.html" class="hover-link">Contact</a></li>
             </ul>
         </div>
