--- a/case-studies.html
+++ b/case-studies.html
@@ -12,6 +12,26 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
-    
+    <!-- nav bar -->
+    <nav class="container main-nav flex">
+        <a href="#" class="company-logo">
+            <!-- <img src="./brand-logo.png" alt="company company-logo"> -->
+            <p class="brand-logo">YoungNomads</p>
+        </a>
+
+        <div class="nav-links ac" id="nav-links">
+            <ul class="flex">
+                <li><a href="/index.html" class="hover-link">Home</a></li>
+                <li><a href="/about.html" class="hover-link">About</a></li>
+                <li><a href="/case-studies.html" class="hover-link active">Case Studies</a></li>
+                <li><a href="/contact.html" class="hover-link">Contact</a></li>
+            </ul>
+        </div>
+
+        <a href="#" class="nav-toggle" id="nav-toggle">
+            <i class="fa-sharp fa-solid fa-bars"></i>
+        </a>
+        </div>
+    </nav>
   </body>
 </html>
