--- a/case-studies.html
+++ b/case-studies.html
@@ -33,5 +33,10 @@
         </a>
         </div>
     </nav>
+
+    <!-- Scripts -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://kit.fontawesome.com/628003722a.js" crossorigin="anonymous"></script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
