--- a/case-studies.html
+++ b/case-studies.html
@@ -34,6 +34,74 @@
         </div>
     </nav>
 
+    <!-- footer -->
+    <footer>
+        <div class="container flex footer-container">
+            <div class="logo-link-div">
+                <a href="#" class="company-logo">
+                    <!-- <img src="./brand-logo.png" alt=""> -->
+                    <p class="brand-logo">YoungNomads</p>
+                </a>
+                <div class="link-div">
+                    <a href="#" class="hover-link"><i class="fa-brands fa-linkedin"></i>Linkedin</a>
+                </div>
+                <div class="link-div">
+                    <a href="#" class="hover-link"><i class="fa-brands fa-twitter"></i>Twitter</a>
+                </div>
+            </div>
+
+            <div class="link-column flex">
+                <h4>Digital Marketing Institutes</h4>
+                <a href="#" class="hover-link">Udaipur</a>
+                <a href="#" class="hover-link">Indore</a>
+                <a href="#" class="hover-link">Calicut</a>
+                <a href="#" class="hover-link">Dehradun</a>
+                <a href="#" class="hover-link">Raipur</a>
+            </div>
+
+            <div class="link-column flex">
+                <h4>Digital Marketing Companies</h4>
+                <a href="#" class="hover-link">New York</a>
+                <a href="#" class="hover-link">Delhi</a>
+                <a href="#" class="hover-link">Trivandrum</a>
+                <a href="#" class="hover-link">Kochi</a>
+                <a href="#" class="hover-link">Kolkata</a>
+                <a href="#" class="hover-link">Ahmedabad</a>
+                <a href="#" class="hover-link">Indore</a>
+            </div>
+
+            <div class="link-column flex">
+                <h4>Affiliate Products</h4>
+                <a href="#" class="hover-link">SEMRush Free Trial</a>
+                <a href="#" class="hover-link">Bluehost Hosting</a>
+                <a href="#" class="hover-link">Affiliate Disclosure</a>
+                <a href="#" class="hover-link">Affiliate Agreement</a>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Newsletter -->
+    <div class="container">
+        <div class="newsletter">
+            <h2>Get the latest updates. Subscribe for our newsletter</h2>
+            <div class="form">
+                <input type="text" placeholder="Enter your email">
+                <a href="/index.html" class="primary-button">Subscribe</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Subfooter -->
+    <div class="subfooter">
+        <div class=" flex toggleButton sub-footer-container">
+            <a href="#" class="hover-link">Privacy policy</a>
+            <a href="#" class="hover-link">Terms of Use</a>
+            <a href="#" class="hover-link">Link Policy</a>
+            <a href="#" class="hover-link">FB Policy</a>
+        </div>
+        <h5>Copyright © 2023 Young Nomads | Digital Marketing</h5>
+    </div>
+
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://kit.fontawesome.com/628003722a.js" crossorigin="anonymous"></script>
