update for active states

--- a/results-summary-component/index.html
+++ b/results-summary-component/index.html
@@ -82,7 +82,7 @@
         </ul>
 
         <button
-          class="w-full p-3 mt-2 text-white rounded-[5rem] bg-dark-gray-blue"
+          class="w-full p-3 mt-2 text-white rounded-[5rem] bg-dark-gray-blue hover:bg-gradient-to-t from-light-royal-blue to-light-slate-blue transition-colors duration-500"
         >
           Continue
         </button>
