--- a/product-preview-card-component/index.html
+++ b/product-preview-card-component/index.html
@@ -1,30 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles/output.css">
-  <title>Frontend Mentor | Product preview card component</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/styles/output.css" />
+    <title>Frontend Mentor | Product preview card component</title>
+  </head>
+  <body
+    class="flex items-center justify-center w-full h-screen bg-cream text-dark-grayish-blue font-montserrat"
+  >
+    <section class="flex flex-col m-4 overflow-hidden rounded-lg md:flex-row">
+      <picture class="md:max-w-[280px]">
+        <source
+          media="(min-width:768px)"
+          srcset="/images/image-product-desktop.jpg"
+        />
+        <img src="/images/image-product-mobile.jpg" alt="Mobile product" />
+      </picture>
+      <div class="p-6 bg-white md:max-w-[280px]">
+        <h3 class="tracking-[.5rem] pb-3 text-xs">PERFUME</h3>
+        <h1 class="pb-3 text-4xl text-very-dark-blue font-fraunces">
+          Gabrielle Essence Eau De Parfum
+        </h1>
+        <p class="pb-4">
+          A floral, solar and voluptuous interpretation composed by Olivier
+          Polge, Perfumer-Creator for the House of CHANEL.
+        </p>
+        <h2 class="pb-4 font-fraunces">
+          <span class="mr-3 text-3xl text-dark-cyan">$149.99 </span>$169.99
+        </h2>
+        <button
+          class="flex items-center justify-center w-full p-3 text-white rounded-lg bg-dark-cyan"
+        >
+          <img class="mr-3" src="./images/icon-cart.svg" alt="Add to Cart" />
+          <span>Add to Cart</span>
+        </button>
+      </div>
+    </section>
 
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
-  
-  <!-- <div class="attribution">
+    <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
-</body>
+  </body>
 </html>
