feat: styled button for active state

--- a/product-preview-card-component/index.html
+++ b/product-preview-card-component/index.html
@@ -40,7 +40,7 @@
           <span class="mr-3 text-3xl text-dark-cyan">$149.99 </span>$169.99
         </h2>
         <button
-          class="flex items-center justify-center w-full p-3 text-white rounded-lg bg-dark-cyan"
+          class="flex items-center justify-center w-full p-3 text-white transition duration-300 rounded-lg bg-dark-cyan hover:bg-very-dark-blue"
         >
           <img class="mr-3" src="./images/icon-cart.svg" alt="Add to Cart" />
           <span>Add to Cart</span>
