--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -8,11 +8,14 @@
   <link rel="stylesheet" href="/styles/output.css">
   <title>Frontend Mentor | QR code component</title>
 </head>
-<body>
-
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+<body class="grid w-full h-screen place-content-center bg-light-gray">
+  <article class="w-[300px] bg-white p-4 rounded-xl">
+    <img class="rounded-lg" src="/images/image-qr-code.png" alt="QR Code">
+    <div class="p-2 my-2 text-center">   
+      <h1 class="mb-3 text-xl font-bold leading-6 text-dark-blue">Improve your front-end skills by building projects</h1>
+      <p class="text-[15px] text-grayish-blue leading-5"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
+  </article>
   
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
