--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles/output.css">
-  <title>Frontend Mentor | QR code component</title>
-</head>
-<body class="grid w-full h-screen place-content-center bg-light-gray">
-  <article class="w-[300px] bg-white p-4 rounded-xl">
-    <img class="rounded-lg" src="/images/image-qr-code.png" alt="QR Code">
-    <div class="p-2 my-2 text-center">   
-      <h1 class="mb-3 text-xl font-bold leading-6 text-dark-blue">Improve your front-end skills by building projects</h1>
-      <p class="text-[15px] text-grayish-blue leading-5"> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </div>
-  </article>
-  
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/styles/output.css" />
+    <title>Frontend Mentor | QR code component</title>
+  </head>
+  <body class="grid w-full h-screen place-content-center bg-light-gray">
+    <article class="w-[300px] bg-white p-4 rounded-xl">
+      <img class="rounded-lg" src="/images/image-qr-code.png" alt="QR Code" />
+      <div class="p-2 my-2 text-center">
+        <h1 class="mb-3 text-xl font-bold leading-6 text-dark-blue">
+          Improve your front-end skills by building projects
+        </h1>
+        <p class="text-[15px] text-grayish-blue leading-5">
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </div>
+    </article>
+  </body>
 </html>
