fix: added margin and max-width to qr-code-component

--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -17,7 +17,7 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body class="grid w-full h-screen place-content-center bg-light-gray">
-    <article class="w-[300px] bg-white p-4 rounded-xl">
+    <article class="max-w-[300px] bg-white p-4 rounded-xl mx-6">
       <img class="rounded-lg" src="/images/image-qr-code.png" alt="QR Code" />
       <div class="p-2 my-2 text-center">
         <h1 class="mb-3 text-xl font-bold leading-6 text-dark-blue">
