--- a/nft-preview-card-component/index.html
+++ b/nft-preview-card-component/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/styles/output.css">
   <title>Frontend Mentor | NFT preview card component</title>
 </head>
 <body>
